# algoFlow

./: .gitignore  CMakeLists.txt  README.md  debug.h  templates.h
algo/: mex.cpp
algotemplates/: LIS.cpp  backtracking_basics_1.cpp  bfs_basic.cpp  binary_search.cpp  binary_search_the_answer_maximize_median.cpp  bitmask_get_all_combinations.cpp  counting_sort.py  custom_sort.cpp  get_neighbours.cpp  mex.cpp  sliding_window_maximum_sub_array_sum.cpp  sliding_window_min_subarray_sum.cpp
contest/: A.cpp  A.py  CMakeLists.txt  data.in  data.out  lc.py  main.cpp  template-lc.py  template-simple.py  template.cpp  template.py
contest-problems/: smallest_subseqence_containing_all_distinct_characters.cpp
cpp-refresh/: class_templates.cpp  for_each.cpp  for_each_n.cpp  makeit_look_modern.cpp  non_type_template_parameters.cpp  rule-0-break.cpp  rule-0.cpp  smart-pointers.cpp  templates.cpp  timer.cpp  vectors2.cpp
cses/: CMakeLists.txt  apple_division.cpp  coin_combinations.cpp  dice_combinations.cpp  minimizing_coins.cpp  minimizing_coins_dfs.cpp  subarray_sums1.cpp  weird_algorithm.cpp
graph/: LCA.py  check_bipartite.cpp  check_no_cycle_and_connected_undirected_graph.py  djikstra.cpp  djikstra2.cpp  djikstra_get_min_cost_to_visit_all_nodes.py  get_all_paths_from_source_to_target_directed.py  get_connected_components.cpp  graph_basics.cpp  graph_representation.cpp  heilholzer.cpp  post_order_traversal.cpp  topo_sort_dfs.cpp  topo_sort_khan.cpp
math/: check_leap_year.cpp  check_odd_even.cpp  check_prime.cpp  convert_to_base_k.cpp  divide_by_2.py  fibonacci.cpp  (+12 more)
(+498 files in other folders)
